# Minamoto-Chess

./: Cargo.toml
minamoto-chess/: .gitignore  Cargo.toml  LICENSE  config.json
minamoto-chess-core/: Cargo.toml  config.json
minamoto-chess-core/src/: board.rs  castling.rs  lib.rs  piece.rs  zobrist.rs
minamoto-chess-core/src/move/: mod.rs
minamoto-chess-core/src/move_generation/: attack_calculator.rs  move_gen.rs
minamoto-chess-core/src/precomputed_data/: magic_bitboards.rs  magic_lookup_moves.rs  magic_lookup_table.rs  magic_score.rs  mod.rs  square_magic.rs
minamoto-chess-wasm/: Cargo.toml  LICENSE
minamoto-chess-wasm/src/: lib.rs
minamoto-chess/benches/: move_gen_benchmark.rs  perft_benchmark.rs
minamoto-chess/src/: attack_calc_extensions.rs  attack_info.rs  board.rs  board_extensions.rs  board_extenstions.rs  board_representation.rs  config.rs  fen_api.rs  game.rs  lib.rs  magic_bitboard_gen.rs  move_extensions.rs  move_gen_extensions.rs  move_type_wrapper.rs  piece_dto.rs  uci_move.rs
minamoto-chess/src/magic/: magic_bitboard_gen.rs  mod.rs
minamoto-chess/src/move/: mod.rs  move_record.rs
minamoto-chess/src/move_generation/: attack_calculator.rs  move_gen.rs
minamoto-chess/src/perft/: mod.rs  perft_node.rs  perft_result.rs
minamoto-chess/src/precomputed_data/: magic_bitboard_gen.rs  magic_loader.rs  magic_lookup_moves.rs  magic_lookup_table.rs  magic_score.rs  mod.rs  square_magic.rs
