[package]
name = "minamoto-chess-core"
version = "0.1.0"
authors = ["Rostislavs Berjoza <rostislavs.berjoza.work@gmail.com>"]
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
rustc-hash = "2.1.1"
lazy_static = "1.5.0"
phf = { version = "0.13.1", features = ["macros"] }

[features]
__internal_api = [] # Private feature for internal use only
all_promotions = [] # Enable bishop and rook promotions in move generation