[package]
name = "minamoto-chess-wasm"
version = "0.0.0"
authors = ["Rostislavs Berjoza <rostislavs.berjoza.work@gmail.com>"]
edition = "2024"
description = "WASM bindings for Minamoto Chess API"
license = "MIT"
repository = "https://github.com/RostBerry/Minamoto"

[dependencies]
minamoto-chess = { path = "../minamoto-chess" }
wasm-bindgen = "0.2.108"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
serde = { version = "1.0.228", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]