[package]
name = "minamoto-chess"
version = "0.1.0"
authors = ["Rostislavs Berjoza <rostislavs.berjoza.work@gmail.com>"]
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
rustc-hash = "2.1.1"
serde_json = "1.0.149"
lazy_static = "1.5.0"
phf = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "move_gen_benchmark"
harness = false

[[bench]]
name = "perft_benchmark"
harness = false