[package]
name = "minamoto-chess"
version = "0.0.0"
authors = ["Rostislavs Berjoza <rostislavs.berjoza.work@gmail.com>"]
edition = "2024"
description = "WASM bindings for Minamoto Chess API"
license = "MIT"
repository = "https://github.com/RostBerry/Minamoto"

[dependencies]
minamoto-chess-core = { path = "../minamoto-chess-core", features = ["__internal_api", "all_promotions"] }
wasm-bindgen = "0.2.108"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
js-sys = "0.3.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "move_gen_benchmark"
harness = false

[[bench]]
name = "perft_benchmark"
harness = false